style.css
 * {
     box-sizing: border-box;
 }

 body,
 html {
     height: 100%;
     margin: 0;
     padding: 0.5vh;
     font-family: sans-serif;
 }

 #wrapper {
     display: grid;
     grid-template-rows: auto minmax(0, 1fr);
     grid-template-columns: 100%;
     height: 97vh;
	 grid-gap: 1vh;
 }

 #main {
     display: none;
     grid-template-columns: 80% 19%;
     grid-gap: 1%;
 }
 
 

 #peerDeets {
     display: none;
 }
 #conninfo{
	 display: none; 
 }
 
 #menuwrapper{
	 display:none;
 }
 #burger {
     width: 4vh;
     height: auto;
     cursor: pointer;
     display: none;
 }

 #topbar {
     display: grid;
     grid-template-columns: minmax(0, 1fr) auto;
     grid-gap: 1%;
 }

 #infowrap {
     text-align: right;
     padding-right: 2px;
 }

 #menu {
	 padding:0;
	 margin:0px;
	 list-style-type: none;
 }

 #menu > li {
  display: block;
  text-align: center;
  float: left;
  padding: 1vh;
  margin: 0vh 0.5vh;
  color: white;
  background-color: #2196F3;
  border-radius: 1vh;
  cursor: pointer;
}

 #menu > li:hover {
  color: black;
 }
 
  label {
	 cursor: inherit;
 }

 #menu_vid {
     display: none;
 }

 
 #mopener {
     display: none;
 }



 video {
     width: 100%;
     height: auto;
 }

 .pic_cont {
     width: 100%;
     height: auto;
 }


 input[type="file"]{
     display: none;
 }

 .pdf_cont {
     width: 100%;
     height: 90%;
 }

 .hdwrp {
     display: flex;     
	 background-color: #2196F3;
     margin-bottom: .0125vh;
	 cursor: grab;
	 align-items: center;
 }
	
 .hdwrp:active {
	 cursor: grabbing;	 
 }
 
 .dragheader {
     flex: 9;
     padding: .5vh;
     color: #fff;
 }
 .closer {
     padding: .5vh;
     flex: 1;
     color: black;
 }

 .closer:hover {
     background-color: red;
     cursor: default;
     color: white;
 }

 .draggable {
     position: absolute;
     min-width: 20%;
     height: auto;
     top: 10%;
     left: 50%;
     transform: translateX(-50%);
     background-color: #f1f1f1;
     text-align: center;
     border: 1px solid #d3d3d3;
     overflow: auto;
 }

 #msgwrap {
     display: none;
     grid-template-rows: auto minmax(0, 1fr) auto;
	 position: absolute;
	 right:1vw;
     border: .125vh solid;
     width: 20%;
     height: 90%;
     background-color: #f1f1f1;
     overflow: auto;
	 resize: both; 
 }
 
 #msghdwrp {
	 justify-content: center;
	}
 
#msgdraghead {
    color: #fff;
	text-align: center;
	padding: .5vh;
 }
 
 #messageArea {
     font-size: 90%;
     overflow: auto;
     padding: .5vh;
     margin: .5vh;
 }

 #sendarea {
     display: none;
     grid-template-columns: 80% 19%;
     grid-gap: 1%;
 }

 #sendMessageBox {
     width: 100%;
 }
 .conf_btn {
     font-size: 120%;
     padding: 1vh;
     margin: 1vh;
     margin-bottom: 2vh;
     color: white;
 }

 .accept_stream {
     background-color: #4CAF50;
 }

 .reject_stream {
     background-color: red;
 }
 
 .drawn{
	 display:block;
 }
 
  .deleted{
	 display:none;
 }
 
 /*start drawing css */
 
 #draw_wrapper {
    height: 90%
}

#bkg {
    position: absolute;
    height: 90%;
    width: 99%;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}

#draw_wrapper > canvas {
    position: absolute;
}

#cnv_btns {
    display:none;
	grid-template-rows: auto auto;
	grid-template-columns: auto auto auto auto auto auto auto;
	position: absolute;
	z-index:2;
}

#cnv_cntrls {
    position: absolute;
    background-color: white;
    display: none;
    border-width: 0.125vw 0.125vw 0.125vw 0;
    border-style: solid;
    margin-top: 0.25vh;
	font-size: 80%;
}

#cnv_cntrls>div {
    padding: 0.5vw;
    border-left: 0.125vw solid;
}

.dr_ctrl_inf {
	margin-bottom: 0.25vh;

}

#minicloser {
    position: relative;
    top: 0;
    right: 0;
    background-color: red;
    color: white;
    padding: 0 0.25vh 0.25vh;
    align-self: flex-start;
    cursor: default;
    font-size: 100%;
    line-height: 100%;
    font-weight: bold;
}

#minicloser:hover {
    color: black;
}

.visible {
    visibility: visible;
}

.invisible {
    visibility: hidden;
}

.block {
    display: block;
}

.none {
    display: none;
}

#txtwrp {
    position: absolute;
    z-index: 999999999999999;
    display: none;
    grid-template-columns: auto auto;
    grid-gap: 0.125vh;
}

#txtinput {
    grid-row: 1 / 3;
    align-self: end;
    min-width: 10px;
    vertical-align: text-bottom;
}

#txtsave {
    background-color: green;
}

#txtdelete {
    background-color: red;
    display: flex;
}

.txtctrl {
    align-self: start;
    justify-content: center;
    align-items: center;
    color: white;
    font-weight: bold;
    padding: 0 0.25vh;
    cursor: default;
    margin: 0.125vh;
}

.txtctrl:hover {
    color: black;
}

.ssfont {
    font-family: sans-serif;
}

#sfont {
    font-family: serif;
}

#crsfont {
    font-family: cursive;
}

#monfont {
    font-family: monospace;
}

#fntfont {
    font-family: fantasy;
}

.fntdef {
    font-size: 30px;
}

#fntsml {
    font-size: 15px;
}

#fntlg {
    font-size: 60px;
}

#fntxl {
    font-size: 120px;
}

 @media screen and (max-width: 600px) {
	#msgwrap {
     width: 98%;		
	}
	 label,
 input:checked+#menu {
     display: block;
 }
	
	#burger{
		display:inline;
	}
	
	#menu {
	top: 3vh;
	display: none;
	position: absolute;
	left: 2vh;
	z-index: 9999999999999999;
	}
	
	#menu > li{
		float:none;
	}
	
	 .menuItem {
		 padding: 0.5vh 2vh 0.5vh 1vh;
		 border: .1vh solid;
	 }
	#cnv_btns {
		grid-auto-flow: column;
		grid-template-columns: auto auto;
		grid-template-rows: auto auto auto auto auto auto auto;
	}
	#cnv_btns > button{
		width:100%;
	}
 }	

